--- a/application.properties
+++ b/application.properties
@@ -1,11 +1,10 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/sms?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
+spring.datasource.url=jdbc:mysql://localhost:3306/lindaschool?useUnicode=true&useJDBCCompliantTimezone
+Shift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+server.error.whitelabel.enabled=false
+server.port=7050
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=
 
-#Hibernate
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
-
-#Hibernate auto ddl
-spring.jpa.hibernate.ddl-auto=update
-
-logging.level.org.hibernate.SQL=DEBUG
+spring.jpa.open-in-view=false
+spring.thymeleaf.cache=false
+api.base.path = http://localhost:7050  // this the port i set where tomcat run
